--- a/BlurEngine/BlurEngine/BlurEngine.vcxproj
+++ b/BlurEngine/BlurEngine/BlurEngine.vcxproj
@@ -58,7 +58,7 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.296.0\Include;Source\Engine;Source\Engine\Core;Source\Engine\VulkanCore;Source\ThirdParty\glfw\include;Source\ThirdParty\glm;Source\ThirdParty\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.296.0\Include;Source\Engine\Core;Source\Engine\VulkanCore;Source\ThirdParty\glfw\include;Source\ThirdParty\glm;Source\ThirdParty\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -76,7 +76,7 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.296.0\Include;Source\Engine;Source\Engine\Core;Source\Engine\VulkanCore;Source\ThirdParty\glfw\include;Source\ThirdParty\glm;Source\ThirdParty\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.296.0\Include;Source\Engine\Core;Source\Engine\VulkanCore;Source\ThirdParty\glfw\include;Source\ThirdParty\glm;Source\ThirdParty\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -106,6 +106,7 @@
   <ItemGroup>
     <ClCompile Include="Source\Engine\Core\Application.cpp" />
     <ClCompile Include="Source\Engine\Core\Logger.cpp" />
+    <ClCompile Include="Source\Engine\Core\Renderer\Renderer.cpp" />
     <ClCompile Include="Source\Engine\Core\Window.cpp" />
     <ClCompile Include="Source\Engine\Main.cpp" />
     <ClCompile Include="Source\Engine\VulkanCore\Context.cpp" />
