WIP swapchain creation

--- a/BlurEngine/BlurEngine/BlurEngine.vcxproj
+++ b/BlurEngine/BlurEngine/BlurEngine.vcxproj
@@ -102,6 +102,8 @@
     <ClInclude Include="Source\Engine\Core\Window.h" />
     <ClInclude Include="Source\Engine\VulkanCore\Context.h" />
     <ClInclude Include="Source\Engine\VulkanCore\PhysicalDevice.h" />
+    <ClInclude Include="Source\Engine\VulkanCore\Swapchain.h" />
+    <ClInclude Include="Source\Engine\VulkanCore\Texture.h" />
     <ClInclude Include="Source\Engine\VulkanCore\Utility.h" />
     <ClInclude Include="Source\Engine\VulkanCore\VulkanCommon.h" />
   </ItemGroup>
@@ -113,9 +115,11 @@
     <ClCompile Include="Source\Engine\Main.cpp" />
     <ClCompile Include="Source\Engine\VulkanCore\Context.cpp" />
     <ClCompile Include="Source\Engine\VulkanCore\PhysicalDevice.cpp" />
+    <ClCompile Include="Source\Engine\VulkanCore\Swapchain.cpp" />
+    <ClCompile Include="Source\Engine\VulkanCore\Texture.cpp" />
     <ClCompile Include="Source\Engine\VulkanCore\Utility.cpp" />
+    <ClCompile Include="Source\Engine\VulkanCore\VmaUsage.cpp" />
     <ClCompile Include="Source\Engine\VulkanCore\VulkanCommon.cpp" />
-    <ClCompile Include="VmaUsage.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
