--- a/BlurEngine/BlurEngine/BlurEngine.vcxproj
+++ b/BlurEngine/BlurEngine/BlurEngine.vcxproj
@@ -96,13 +96,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Framebuffer.h" />
     <ClInclude Include="Source\Engine\Core\Application.h" />
     <ClInclude Include="Source\Engine\Core\Logger.h" />
     <ClInclude Include="Source\Engine\Core\Renderer\Renderer.h" />
     <ClInclude Include="Source\Engine\Core\Window.h" />
     <ClInclude Include="Source\Engine\VulkanCore\Context.h" />
+    <ClInclude Include="Source\Engine\VulkanCore\Framebuffer.h" />
     <ClInclude Include="Source\Engine\VulkanCore\PhysicalDevice.h" />
+    <ClInclude Include="Source\Engine\VulkanCore\Pipeline.h" />
     <ClInclude Include="Source\Engine\VulkanCore\RenderPass.h" />
     <ClInclude Include="Source\Engine\VulkanCore\ShaderModule.h" />
     <ClInclude Include="Source\Engine\VulkanCore\Swapchain.h" />
@@ -111,14 +112,15 @@
     <ClInclude Include="Source\Engine\VulkanCore\VulkanCommon.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Framebuffer.cpp" />
     <ClCompile Include="Source\Engine\Core\Application.cpp" />
     <ClCompile Include="Source\Engine\Core\Logger.cpp" />
     <ClCompile Include="Source\Engine\Core\Renderer\Renderer.cpp" />
     <ClCompile Include="Source\Engine\Core\Window.cpp" />
     <ClCompile Include="Source\Engine\Main.cpp" />
     <ClCompile Include="Source\Engine\VulkanCore\Context.cpp" />
+    <ClCompile Include="Source\Engine\VulkanCore\Framebuffer.cpp" />
     <ClCompile Include="Source\Engine\VulkanCore\PhysicalDevice.cpp" />
+    <ClCompile Include="Source\Engine\VulkanCore\Pipeline.cpp" />
     <ClCompile Include="Source\Engine\VulkanCore\RenderPass.cpp" />
     <ClCompile Include="Source\Engine\VulkanCore\ShaderModule.cpp" />
     <ClCompile Include="Source\Engine\VulkanCore\Swapchain.cpp" />
