--- a/BlurEngine/BlurEngine/BlurEngine.vcxproj
+++ b/BlurEngine/BlurEngine/BlurEngine.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="Source\Engine\Core\Application.h" />
     <ClInclude Include="Source\Engine\Core\Logger.h" />
     <ClInclude Include="Source\Engine\Core\Renderer\Renderer.h" />
+    <ClInclude Include="Source\Engine\Core\Runtime\Camera.h" />
     <ClInclude Include="Source\Engine\Core\Window.h" />
     <ClInclude Include="Source\Engine\VulkanCore\Buffer.h" />
     <ClInclude Include="Source\Engine\VulkanCore\CommandQueueManager.h" />
@@ -120,6 +121,7 @@
     <ClCompile Include="Source\Engine\Core\Application.cpp" />
     <ClCompile Include="Source\Engine\Core\Logger.cpp" />
     <ClCompile Include="Source\Engine\Core\Renderer\Renderer.cpp" />
+    <ClCompile Include="Source\Engine\Core\Runtime\Camera.cpp" />
     <ClCompile Include="Source\Engine\Core\Window.cpp" />
     <ClCompile Include="Source\Engine\Main.cpp" />
     <ClCompile Include="Source\Engine\VulkanCore\Buffer.cpp" />
